--- a/index.html
+++ b/index.html
@@ -3,17 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Bootstrap Table of Contents</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <h2>Hello World!</h2>
-  <h3>Hello World!</h3>
-  <h4>Hello World!</h4>
-  <h5>Hello World!</h5>
-  <h6>Hello World!</h6>
-
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<div class="container">
+    <div class="row">
+        <div class="col"><h1>Hello World!</h1></div>
+    </div>
+    <div class="row">
+        <div class="col-sm-3 bg-danger"><h1>Sidebar</h1></div>
+        <div class="col"><h1>Content</h1></div>
+    </div>
+    <div class="row">
+        <div class="col"><h1>Hello World!</h1></div>
+        <div class="col"><h1>Hello World!</h1></div>
+        <div class="col"><h1>Hello World!</h1></div>
+    </div>
+    <div class="row">
+        <div class="col"><h1>Hello World!</h1></div>
+        <div class="col"><h1>Hello World!</h1></div>
+        <div class="col"><h1>Hello World!</h1></div>
+        <div class="col"><h1>Hello World!</h1></div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
