--- a/index.html
+++ b/index.html
@@ -7,25 +7,23 @@
 </head>
 <body>
 <div class="container">
-    <div class="row">
-        <div class="col"><h1>Hello World!</h1></div>
-    </div>
-    <div class="row">
-        <div class="col-sm-3 bg-danger"><h1>Sidebar</h1></div>
-        <div class="col"><h1>Content</h1></div>
-    </div>
-    <div class="row">
-        <div class="col"><h1>Hello World!</h1></div>
-        <div class="col"><h1>Hello World!</h1></div>
-        <div class="col"><h1>Hello World!</h1></div>
-    </div>
-    <div class="row">
-        <div class="col"><h1>Hello World!</h1></div>
-        <div class="col"><h1>Hello World!</h1></div>
-        <div class="col"><h1>Hello World!</h1></div>
-        <div class="col"><h1>Hello World!</h1></div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <h1>Table Of Contents for Bootstrap Study</h1>
+    <table>
+        <tr>
+            <th>Topic</th>
+            <th>Link</th>
+        </tr>
+        <tr>
+            <td>Grid</td>
+            <td><a href="grid.html">Example</a></td>
+        </tr>
+        <tr>
+            <td>Color Classes</td>
+            <td><a href="colors.html">Examples</a></td>
+        </tr>
+    </table>
+
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
