Utilities Update - Day 1

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <td>Color Classes</td>
             <td><a href="colors.html">Examples</a></td>
         </tr>
+        <tr>
+            <td>Bootstrap Utilites</td>
+            <td><a href="utilities.html">Examples</a></td>
+        </tr>
     </table>
 
 </div>
