--- a/Carousel/carousel.html
+++ b/Carousel/carousel.html
@@ -28,6 +28,16 @@
       </div>
     </div>
 
+    <!-- Left and right controls/icons -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+
+    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+
+    </div>
 
   </div>
 
