--- a/Challenges/challengeOneSolution.html
+++ b/Challenges/challengeOneSolution.html
@@ -5,12 +5,13 @@
     <title>Creation Challenge</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="custom.css" type="text/css" />
 </head>
 <body class="bg-dark">
 <div class="container bg-light">
     <div class="row">
         <div class="col">
-            <div class="mt-4 p-5 bg-primary text-white">
+            <div class="mt-4 p-5 bg-primary customBlue">
                 <h1>Welcome to Web Design</h1>
                 <p>Home of all your web development needs</p>
             </div>
@@ -115,7 +116,7 @@
 
 </div>
 
-</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
